--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,10 @@
     "system/**",
     "third_party/**",
     "tools/**",
-  ]
+  ],
+  "CodeGPT.apiKey": "CodeGPT Plus Beta",
+  "CodeGPT.Autocomplete.provider": "CodeGPT Plus - Plus",
+  "CodeGPT.Autocomplete.enabled": true,
+  "files.autoSave": "afterDelay",
+  "explorer.excludeGitIgnore": true
 }
